<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPShare</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="drawer_items">
        <item>Track</item>
        <item>Routes</item>
        <item>Images</item>
        <item>Journals</item>
        <item>Friends</item>
        <item>Map</item>
    </string-array>

    <string name="journals_loading">Loading Journals...</string>
    <string name="actvitity">Activity</string>
    <string name="journal">Journal</string>
    <string name="journals">Journals</string>
    <string name="dateTime">Date Time:</string>
    <string name="trip">Trip:</string>
    <string name="trips">Trips</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="allPhotos">All Photos</string>
    <string name="FLASH_MODE_AUTO">FLASH_MODE_AUTO</string>
    <string name="FLASH_MODE_ON">FLASH_MODE_ON</string>
    <string name="FLASH_MODE_OFF">FLASH_MODE_OFF</string>
    <string name="hello">Hello World, RouteTrackingActivity!</string>
    <string name="app_name">GPShare</string>
    <string name="screenText">Main</string>
    <string name="cameraText">Camera Screen</string>
    <string name="camera">Camera</string>
    <string name="loginButton">Log In</string>
    <string name="redirectToRegister">Register Now!</string>
    <string name="RegisterText">Email Address</string>
    <string name="startCamera">Start Camera</string>
    <string name="saveRoute">Save Route</string>
    <string name="logOut">log Out</string>
    <string name="registerButton">Register</string>
    <string name="username">Email Address</string>
    <string name="add">Add</string>
    <string name="images">Images</string>
    <string name="place">Place</string>
    <string name="password">Password</string>
    <string name="password2">Retype Password</string>
    <string name="splash_screen">Geo Cam</string>
    <string name="download_ticker">Uploading Picture</string>
    <string name="app_desc">Checkout out Hackbook for Android to learn how you can make your android apps social using Facebook Platform.</string>
    <string name="app_action">I am using the Hackbook for Android</string>
    <string name="request_message">Learn how to make your android apps social.</string>
    <string name="request">Request!</string>
    <string name="upload">Upload Photo</string>
    <string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="no_login">Graph API Explorer</string>
    <string name="get_permissions">Get Permissions</string>
    <string name="access_token">Access Token:</string>
    <string name="graph_domain">https://graph.facebook.com/</string>
    <string name="submit">Submit</string>
    <string name="label_output">Output:</string>
    <string name="show_metadata">Show metadata</string>
    <string name="show_picture">Show picture</string>
    <string name="view_url">URL</string>
    <string name="target_url">Target URL:</string>
    <string name="exception">Exception: </string>
    <string name="tip_label">Tip:</string>
    <string name="facebook_error">Facebook Error: </string>
    <string name="api_response">Api Response:</string>
    <string name="view_source">View Source</string>
    <string name="view_post">View Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="source_code">Source Code:</string>
    <string name="please_wait">Please wait</string>
    <string name="view_photo">View Photo</string>
    <string name="hide_photo">Hide Photo</string>
    <string name="tag_photo">Tag Photo</string>
    <string name="graph_button">Graph API</string>
    <string name="fql_button">FQL Query</string>
    <string name="source_tag">Source tag:</string>
    <string name="permission_source_tag">Source tag: \"perms_tag\"</string>
    <string name="Graph_FQL_title">Graph API or FQL Query?</string>
    <string name="Graph_FQL_msg">Get friends using Graph or FQL Query?\n\nWith FQL query you can sort the list by names, whereas with Graph list will be ordered by UID and can\'t be changed.</string>
    <string name="can_post_on_wall_title">Post on friend\'s wall</string>
    <string name="can_post_on_wall">Friends list fetched. You can post on friend\'s wall by clicking on the item.</string>
    <string name="ok">OK</string>
    <string name="post_on_wall_title">Post on Wall?</string>
    <string name="post_on_wall">Would you like to post on %1$s\'s wall</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_journals_exist">No Journals Exist</string>
    <string name="save">Save</string>
    <string name="place_manager">Place Manager -- Use Place manager to select, add, update and delete places. </string>
    <string name="places">Places</string>
    <string name="trip_manager">Trip Manager -- Use Trip manager to select, add, update and delete trips. </string>
    <string name="trips">Trips</string>
    <string name="journal_manager">Journal Manager -- Use Journal manager to select, add, update and delete Journals. </string>
    <string name="journals">Journals</string>
    <string name="reset">Reset</string>
    <string name="get_fields">Get Fields</string>
    <string name="fields">Fields</string>
    <string name="connections">Connections</string>
    <string name="checkin">Check-in</string>
    <string name="cancel">Cancel</string>
    <string name="user">User Data</string>
    <string name="friend">Friends Data</string>
    <string name="edit">Edit</string>
    <string name="extended">Extended</string>
    <string name="gallery_remote_title">Upload from gallery or remote?</string>
    <string name="gallery_remote_msg">Upload picture from phone\' gallery or remote server?</string>
    <string name="gallery_button">Gallery</string>
    <string name="remote_button">Remote</string>
    <string name="get_location">Get Location?</string>
    <string name="get_default_or_new_location">Get current location or use Times Square as the location?</string>
    <string name="current_location_button">Current Location</string>
    <string name="fetching_current_permissions">Fetching current permissions</string>
    <string name="explorer_message">Also, checkout the web-version of the <a href="http://developers.facebook.com/tools/explorer">Graph API Explorer tool</a></string>
    <string name="nearby_places">Fetching nearby places</string>
    <string name="times_square_button">Times Square</string>
    <string name="check_in_title">Check-in?</string>
    <string name="permissions">Permissions</string>
    <string name="back_parent">Back to parent</string>
    <string name="fields_and_connections">Fields \u0026 Connections</string>
    <string name="permissions_request">Select Permissions:</string>
    <string name="permission_detail">Checkout <a href="https://developers.facebook.com/docs/authentication/permissions/">permissions reference doc</a></string>
    <string name="fetching_location">Fetching Location</string>
    <string name="check_in_at">Would you like to check-in at %1$s?</string>
    <string name="post_tip">\'read_stream\' permission is required to view and delete the post.\n\nUse SDK dialogs to publish stories or post on friends wall. <a href="https://developers.facebook.com/docs/reference/dialogs">More info</a>\n\n<a href="https://developers.facebook.com/docs/reference/api/Comment">Like and Comment on a post</a></string>
    <string name="photo_tip">Photos are by default uploaded to the app\'s album. Specify album_id to upload to specific album. E.g. https://graph.facebook.com/{album_id}/photos.\n\nMore Info: https://developers.facebook.com/docs/reference/api/photo</string>
    <string name="fqlquery">Enter FQL Query:</string>
    <string name="enable_gps_title">Enable GPS</string>
    <string name="enable_gps">Please enable GPS to get nearby places and check-in</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="geocam_description">Thank You for Downlo</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="desc"></string>
    <string name="locating">Locating</string>
    <string name="points">Points: </string>
    <string name="altitude">Altitude: </string>
    <string name="speed">Speed</string>
    <string name="topSpeed">Top Speed: </string>
    <string name="distance">Distance</string>
    <string name="elapsedTime">Elapsed Time: </string>
    <string name="track">Track</string>
    <string name="rise">Rise: </string>
    <string name="fall">Fall: </string>
    <string name="averageSpeed">Average Speed: </string>
    <string name="gpsSignalAccuracy">GPS Signal Accuracy: </string>
    <string name="map">Map</string>
    <string name="cam">Cam</string>
    <string name="currentPlace">Current Place: </string>
    <string name="places">Places</string>
    <string name="track">Track</string>
    <string name="tags">Tags</string>
    <string name="routes">Routes</string>
    <string name="routeCount">Route Count: </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="routeSummary">Route Summary</string>
    <!-- Prod map Key:0VId7v01IXlIfBbZsrdhUSx2-YW7xIaNsct3gnQ -->
    <!-- Dev map Key:0VId7v01IXlL3Qny_cT14ZhT-uj42FXBp93GOow -->
    <string name="prodMapKey1">0VId7v01IXlL3Qny_cT14ZhT-uj42FXBp93GOow</string>
    <string name="prodMapKey">0VId7v01IXlIfBbZsrdhUSx2-YW7xIaNsct3gnQ</string>
    <string name="clickToAddPoints">Click Map to Add Points</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_camera_act_for_result">CameraActForResult</string>

</resources>