<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <!--
         <TextView
        android:id="@+id/txtStartTracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dip"
        android:gravity="center_horizontal"
        android:text="Click Start to Begin Tracking!"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dip" />
    -->

    <LinearLayout
        android:id="@+id/lytHolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tblMainTableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:id="@+id/myCurrentLocationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/currentPlace"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/myCurrentLocationTextDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/currentPlace"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/stats_element_rounded_corners"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/txtElapsedTimeDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00:00"
                    android:textColor="@color/DarkRed"
                    android:textSize="42dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stats_element_rounded_corners"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txtDistanceDisplay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/DarkRed"
                            android:textSize="42sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvDistanceUom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:textColor="@color/DarkRed"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stats_element_rounded_corners"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txtSpeedDisplay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/DarkRed"
                            android:textSize="42sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSpeedUom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:textColor="@color/DarkRed"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />
                </LinearLayout>
            </TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/background_tracking_buttons" >

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TableLayout
                        android:id="@+id/tblOtherStats"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="1" >

                        <TableRow>

                            <TextView
                                android:id="@+id/txtCoordCount"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/points"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/txtCoordCountDisplay"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/points"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:id="@+id/txtLatitude"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/latitude"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/txtLatitudeDisplay"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/locating"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:id="@+id/txtLongitude"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/longitude"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/txtLongitudeDisplay"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/locating"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:id="@+id/txtTopSpeed"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/topSpeed"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/txtTopSpeedDisplay"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/locating"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:id="@+id/txtAccuracy"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/gpsSignalAccuracy"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/txtAccuracyDisplay"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_margin="5dip"
                                android:text="@string/locating"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </TableRow>
                    </TableLayout>
                </ScrollView>
            </LinearLayout>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytButtonStartStop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/background_tracking_buttons"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lytButtonStartStop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTrackingStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ToggleButton
                android:id="@+id/toggleTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/switch_tracking_selector" 
                android:textColor="@android:color/transparent" />
        </LinearLayout>

        <!--
         <LinearLayout
            android:id="@+id/lytGPSRealTimeTrackingService"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvGPSRealTimeTrackingService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ToggleButton
                android:id="@+id/realTimeToggleTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/switch_tracking_selector"
                android:onClick="toggleRealTimeTrackging"
                android:textColor="@android:color/transparent" />
        </LinearLayout>
        -->

        <LinearLayout
            android:id="@+id/lytButtonStartStop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPebbleConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="Pebble Connection off"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ToggleButton
                android:id="@+id/togglePebble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/switch_tracking_selector"
                android:onClick="tottlePebbleTracking"
                android:textColor="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>